<resources>
    <string name="app_name">VolumeManager</string>
    <string-array name="volume_type">
        <item>voice_call</item>
        <item>system</item>
        <item>ring</item>
        <item>music</item>
        <item>alarm</item>
        <item>notification</item>
        <item>bluetooth_call</item>
        <item>system_enforced</item>
        <item>DTMF</item>
        <item>TTS</item>
    </string-array>

    <string name="dialog_follow_system">follow system</string>

    <string name="loadmore">Loading...</string>

    <!-- WindowChangeDetectingService String -->
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- menu String-->
    <string name="menu_settings">Settings</string>
    <string name="menu_change_recycler_layoutmanager">Change RecyclerView</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_about_us_content">\t this app helps users to change volumes!</string>

    <!-- Snackbar String -->
    <string name="snackbar_setting">setting</string>
    <string name="snackbar_messege">please open the the service in setting!</string>

    <!-- notification String -->
    <string name="notification_title">volume manager is running</string>
    <string name="notification_msg_change_volume">%1$s is opening,the volume will be changed</string>
    <string name="notification_msg_change_volume_extra">,excepting %1$s sound</string>
    <string name="notification_msg_save_volume">the volume will be saved into %1$s!</string>
    <string name="notification_no_volume">you are in no volume model!</string>

    <!-- Setting  string -->
    <string name="wait">please wait for a moment!</string>
    <string name="preference_notification">use notification</string>
    <string name="preference_notification_on_description">preference_notification_on_description</string>
    <string name="preference_notification_off_description">preference_notification_off_description</string>

    <string name="preference_save_users_change">save the users changes</string>
    <string name="preference_save_users_change_off_description">when user change the sound,
        the app do nothing!</string>
    <string name="preference_save_users_change_on_description">when user change the sound,
        the sounds will be saved into databases!</string>
    <string name="preference_question">question</string>
    <string name="preference_question_description">can not change the volume int sometimes</string>
    <string name="preference_save_type">saving type</string>
    <string-array name="preference_save_type">
        <item>system</item>
        <item>program</item>
    </string-array>
    <string-array name="preference_save_value">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="preference_other_function">other function</string>
    <string name="preference_other_function_description">see more function</string>
    <string name="preference_force_change_music">force change music</string>
    <string name="preference_force_change_music_off_description">not change the music volume when the
        music is playing</string>
    <string name="preference_force_change_music_no_description">change the music volume when the
        music is playing</string>
    <string name="preference_force_change_voice_call">force change voice call volume</string>
    <string name="preference_force_change_voice_call_off_description">not change the voice call volume when the
        you are ringing up.</string>
    <string name="preference_force_change_voice_call_no_description">change the music volume when the
        you are ringing up.</string>
    <string name="accessibility_service_description">the service lister the starting of apps in order to change the volumes</string>
    <string name="accessibility_service_name">"volume manager service "</string>
    <string name="preference_question_content">the reason is the accessbility service is colsed sometimes,please try following :
    \n\n samsung：settings - scurity - self-starting \n\nMIUI：settings - Authorised management - self-starting management
        \n\n Huawei：settings - Authorised management - self-starting management
        \n\n MEIZU：settings - application - volume management - Authory - self-starting
        \n\n Sony：settings - powermanagement - STAMINA model</string>

</resources>
