<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_notification"
        android:summaryOff="@string/preference_notification_off_description"
        android:summaryOn="@string/preference_notification_on_description"
        android:title="@string/preference_notification" />


    <CheckBoxPreference
        android:key="@string/preference_save_users_change"
        android:summaryOff="@string/preference_save_users_change_off_description"
        android:summaryOn="@string/preference_save_users_change_on_description"
        android:title="@string/preference_save_users_change" />

    <ListPreference
        android:defaultValue="1"
        android:dependency="@string/preference_save_users_change"
        android:entries="@array/preference_save_type"
        android:entryValues="@array/preference_save_value"
        android:key="@string/preference_save_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/preference_save_type" />


    <SwitchPreference
        android:key="@string/preference_force_change_voice_call"
        android:summaryOff="@string/preference_force_change_voice_call_off_description"
        android:summaryOn="@string/preference_force_change_voice_call_no_description"
        android:title="@string/preference_force_change_voice_call" />

    <SwitchPreference
        android:key="@string/preference_force_change_music"
        android:summaryOff="@string/preference_force_change_music_off_description"
        android:summaryOn="@string/preference_force_change_music_no_description"
        android:title="@string/preference_force_change_music" />


    <Preference
        android:key="@string/preference_question"
        android:summary="@string/preference_question_description"
        android:title="@string/preference_question" />

    <Preference
        android:key="@string/preference_other_function"
        android:summary="@string/preference_other_function_description"
        android:title="@string/preference_other_function" />

</PreferenceScreen>